boltffi_tests/fixtures/negative_scanner/extern_function_pointer.rs
#[export]
pub fn install(callback: extern "C" fn(u32)) {
    let _ = callback;
}
